[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-memory-mcp"
version = "0.1.0"
description = "SQLite-backed Codex session memory exposed through MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
tokens = [
  "tiktoken>=0.12,<1",
]

[project.scripts]
codex-memory = "codex_memory_mcp.cli:main"

[tool.setuptools.packages.find]
include = ["codex_memory_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
